--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
   },
   "dependencies": {
     "@prisma/client": "^2.19.0",
+    "@types/bcrypt": "^3.0.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "isemail": "^3.2.0",
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
+    "@types/nodemailer": "^6.4.1",
     "graphql-tools": "^7.0.4",
     "husky": "4",
     "nodemon": "^2.0.7",
