--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "The Groomzy API",
   "main": "index.ts",
   "repository": "git@github.com:Groomzy-Softwares/groomzy-api.git",
-  "author": "Sifiso <sifisomyeza@blackswan.com>",
+  "author": "Sifiso <myezasifiso11@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "ts-node -r dotenv/config src/index.ts",
     "dev": "nodemon -e ts,graphql -x ts-node -r dotenv/config src/index.ts",
     "lint": "prettier --check .",
     "lint:format": "prettier --write .",
+    "prisma:create": "npx prisma",
+    "prisma:init": "npx prisma init",
     "prisma:format": "npx prisma format",
-    "prisma:migrate": "npx prisma migrate dev --name init"
+    "prisma:migrate:init": "npx prisma migrate dev --name init",
+    "prisma:migrate:update": "prisma migrate dev --name modified"
   },
   "husky": {
     "hooks": {
@@ -20,25 +23,28 @@
     }
   },
   "dependencies": {
-    "@prisma/client": "^2.19.0",
-    "@types/bcrypt": "^3.0.1",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "graphql-yoga": "^1.18.3",
-    "isemail": "^3.2.0",
-    "lodash": "^4.17.21",
+    "@cmdotcom/text-sdk": "1.3.4",
+    "@prisma/client": "2.19.0",
+    "@types/bcrypt": "3.0.1",
+    "bcrypt": "5.0.1",
+    "dotenv": "8.2.0",
+    "graphql-yoga": "1.18.3",
+    "isemail": "3.2.0",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.21",
     "nodemailer": "^6.5.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.35",
-    "@types/nodemailer": "^6.4.1",
-    "graphql-tools": "^7.0.4",
+    "@types/jsonwebtoken": "8.5.1",
+    "@types/lodash": "4.14.168",
+    "@types/node": "14.14.35",
+    "@types/nodemailer": "6.4.1",
+    "graphql-tools": "7.0.4",
     "husky": "4",
-    "nodemon": "^2.0.7",
+    "nodemon": "2.0.7",
     "prettier": "2.2.1",
-    "prisma": "^2.19.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "prisma": "2.19.0",
+    "ts-node": "9.1.1",
+    "typescript": "4.2.3"
   }
 }
